--- a/03_Notebooks/02_Desarrollo/02_Calidad_datos.ipynb
+++ b/03_Notebooks/02_Desarrollo/02_Calidad_datos.ipynb
@@ -384,6 +384,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5e98243-e513-4a64-9197-721f94759df3",
+   "metadata": {},
+   "source": [
+    "### 3.2 Datos nulos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "aadc5e83-75ca-4a39-b735-b59836c4b9b8",
@@ -420,7 +428,7 @@
    "id": "a346e567-322e-4046-8bef-31a92f0cc731",
    "metadata": {},
    "source": [
-    "### 3.2 Valores unicos"
+    "### 3.3 Valores unicos"
    ]
   },
   {
@@ -486,15 +494,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd159348-c807-4986-a408-35e8d601cc0e",
+   "id": "abbc38a7-7d95-43dc-9adf-4c429f0914ed",
    "metadata": {},
    "source": [
-    "### 3.4 Variables Categoricas"
+    "### 3.4 Reestrucutar el dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "01e9f0c2-ec59-4697-8f77-2584a78465d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={\n",
+    "    'CO2(tCO2)' : 'CO2_tCO2',\n",
+    "    'Lagging_Current_Reactive.Power_kVarh': 'Lagging_Current_Reactive_Power_kVarh'\n",
+    "}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "728ef416-e894-4d37-add0-676848f4a715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [col for col in df.columns if col != 'CO2_tCO2'] + ['CO2_tCO2']\n",
+    "df = df[columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0257bd95-f254-40f8-958e-6463410d29dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'Usage_kWh', 'Lagging_Current_Reactive_Power_kVarh',\n",
+       "       'Leading_Current_Reactive_Power_kVarh', 'Lagging_Current_Power_Factor',\n",
+       "       'Leading_Current_Power_Factor', 'NSM', 'WeekStatus', 'Day_of_week',\n",
+       "       'Load_Type', 'CO2_tCO2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd159348-c807-4986-a408-35e8d601cc0e",
+   "metadata": {},
+   "source": [
+    "### 3.5 Variables Categoricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "eac42dae-7b16-4b00-b290-af8dfb9868f8",
    "metadata": {},
    "outputs": [],
@@ -504,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "db05ef9e-9de5-487d-a8e8-f5ac4c44185c",
    "metadata": {},
    "outputs": [
@@ -514,7 +579,7 @@
        "['date', 'WeekStatus', 'Day_of_week', 'Load_Type']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "7c2385e1-77d7-4640-a202-db26d13a6503",
    "metadata": {},
    "outputs": [
@@ -539,7 +604,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,12 +641,12 @@
      "data": {
       "text/plain": [
        "Usage_kWh                               0\n",
-       "Lagging_Current_Reactive.Power_kVarh    0\n",
+       "Lagging_Current_Reactive_Power_kVarh    0\n",
        "Leading_Current_Reactive_Power_kVarh    0\n",
-       "CO2(tCO2)                               0\n",
        "Lagging_Current_Power_Factor            0\n",
        "Leading_Current_Power_Factor            0\n",
        "NSM                                     0\n",
+       "CO2_tCO2                                0\n",
        "dtype: int64"
       ]
      },
