--- a/03_Notebooks/02_Desarrollo/01_Set Up.ipynb
+++ b/03_Notebooks/02_Desarrollo/01_Set Up.ipynb
@@ -13,11 +13,9 @@
    "id": "f442e8c8-5ae7-4445-8b0b-eab642a92939",
    "metadata": {},
    "source": [
-    "El mini proyecto esta enfocado en presentar tres metodos para contruir perfiles. En este caso particular de abandono de clientes, pero se pueden aplicar a cualquier proyecto de la misma indole.\n",
+    "El objetivo inicial de esta base de datos es determinar el consumo energetico de plantas de acero, sin embargo he decidio darle una vuelta y en su lugar darle un enfoque ecologico, por darle un nombre, para determinar el impacto que tienen estas fabricas a partir de la huella de carbono.\n",
     "\n",
-    "Pienso que este tipo de proyectos son un excelente ejemplo del potencia que tiene la ciencia de datos. El motivo es simple, al crear perfiles basados en los datos podemos impulsar la toma de decisiones en la direccion correcta. En este caso, como atacar el abandono de clientes indentificando el porque abandonan los servivios del banco y que se puede hacer para prolongar su estadia.\n",
-    "\n",
-    "Los metodos que voy a mostrar son los siguientes: crear un perfil apartir de la visualizacion y analisis de los datos, identificar cuales son las caracteristicas de abandono al aplicar algoritmo K-Means, y por ultimo al extraer las variables de interes que utiliza un algoritmo de clasificacion al aplicarlo sobre el dataset."
+    "Los objetivos son dos: preparar un algoritmo de regresión que prediga el CO2 liberado y acompañarlo con series de tiempo para visualizar los resultados."
    ]
   },
   {
